k8s/tsdd/yueyan/yuming/ainuo-bjmwxh_com_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ainuo-h5
  namespace: ainuo
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  ingressClassName: nginx
  rules:
  - host: web.bjmwxh.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ainuo-h5
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ainuo-admin
  namespace: ainuo
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  ingressClassName: nginx
  rules:
  - host: admin.bjmwxh.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ainuo-admin
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ainuo-ingress
  namespace: ainuo
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  ingressClassName: nginx
  rules:
  - host: api.bjmwxh.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ainuo-tsdd-svc
            port:
              number: 8090
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ainuo-wss-ingress
  namespace: ainuo
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  ingressClassName: nginx
  rules:
  - host: wss.bjmwxh.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ainuo-wk-svc
            port:
              number: 5200
