k8s/tsdd/yueyan/yuming/tbb-32-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: yueyan-admin-2-ingress
  labels:
    app: yueyan-admin
  namespace: yueyan
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  ingressClassName: nginx
  rules:
  - host: admin.tbb32.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: yueyan-admin
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: yueyan-h5-2-ingress
  namespace: yueyan
  labels:
    app: yueyan-h5
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  ingressClassName: nginx
  rules:
  - host: web.tbb32.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: yueyan-h5
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wss-yueyan-ingress
  namespace: yueyan
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  ingressClassName: nginx
  rules:
  - host: ws.tbb32.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: yueyan-wk-svc
            port:
              number: 5200
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-yueyan-ingress-2
  namespace: yueyan
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  ingressClassName: nginx
  rules:
  - host: api.tbb32.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: yueyan-tsdd-svc
            port:
              number: 8090
